tests/negative/test-fail-comp1.std
Fatal error: exception Failure("type_err:Comparison expression not supported for other operations than eql and neq for bool")